// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`declare-export-declaration.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
rangeEnd: 277
rangeStart: 273
     |                                                                                | printWidth
=====================================input======================================
  1 | declare export function graphql<Props, Variables, Component: React$ComponentType<Props>>
  2 |   (query: GQLDocument, config?: Config<Props, QueryConfigOptions<Variables>>):
  3 |   (Component: Component) => React$ComponentType<$Diff<React$ElementConfig<Component>, {
> 4 |     data: Object|void,
    |                  ^^^^
  5 |     mutate: Function|void
  6 |   }>>
  7 |
  8 | declare type FetchPolicy= "cache-first" | "cache-and-network" | "network-only" | "cache-only"
  9 |
=====================================output=====================================
declare export function graphql<
  Props,
  Variables,
  Component: React$ComponentType<Props>
>(
  query: GQLDocument,
  config?: Config<Props, QueryConfigOptions<Variables>>
): (Component: Component) => React$ComponentType<
  $Diff<
    React$ElementConfig<Component>,
    {
      data: Object | void,
      mutate: Function | void,
    }
  >
>;

declare type FetchPolicy= "cache-first" | "cache-and-network" | "network-only" | "cache-only"

================================================================================
`;

exports[`type-parameter-declaration.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
rangeEnd: 48
rangeStart: 39
     |                                                                                | printWidth
=====================================input======================================
> 1 | declare export function graphql<Props, Variables, Component: React$ComponentType<Props>>
    |                                        ^^^^^^^^^
  2 |   (query: GQLDocument, config?: Config<Props, QueryConfigOptions<Variables>>):
  3 |   (Component: Component) => React$ComponentType<$Diff<React$ElementConfig<Component>, {
  4 |     data: Object|void,
  5 |     mutate: Function|void
  6 |   }>>
  7 |
  8 | declare type FetchPolicy= "cache-first" | "cache-and-network" | "network-only" | "cache-only"
  9 |
=====================================output=====================================
declare export function graphql<
  Props,
  Variables,
  Component: React$ComponentType<Props>
>(
  query: GQLDocument,
  config?: Config<Props, QueryConfigOptions<Variables>>
): (Component: Component) => React$ComponentType<
  $Diff<
    React$ElementConfig<Component>,
    {
      data: Object | void,
      mutate: Function | void,
    }
  >
>;

declare type FetchPolicy= "cache-first" | "cache-and-network" | "network-only" | "cache-only"

================================================================================
`;
